[gd_scene load_steps=8 format=3 uid="uid://dlrxhabxv2084"]

[ext_resource type="Script" uid="uid://v2e3i08ig836" path="res://scripts/fishing_hud.gd" id="1_8se46"]
[ext_resource type="Script" uid="uid://c3jrjq4dim75x" path="res://scripts/CompassWidget.gd" id="2_otwwb"]
[ext_resource type="Texture2D" uid="uid://bbthseaubq6v1" path="res://assets/sprites/Compass_Face.png" id="2_vw7fj"]
[ext_resource type="Texture2D" uid="uid://cod3yh2ba75hv" path="res://assets/sprites/Compass_Needle.png" id="3_2gox2"]
[ext_resource type="Texture2D" uid="uid://ci8te3gnaliuv" path="res://assets/sprites/Location.png" id="3_c2tr4"]
[ext_resource type="Texture2D" uid="uid://bybktjbfq40mh" path="res://assets/sprites/Fishing_Icon.png" id="3_otwwb"]
[ext_resource type="Texture2D" uid="uid://u3tyt71m2h6" path="res://assets/sprites/Menu.png" id="4_2gox2"]

[node name="FishingHud" type="CanvasLayer"]
layer = 40
script = ExtResource("1_8se46")

[node name="HUDRoot" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Compass" type="Control" parent="HUDRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_otwwb")

[node name="CompassFace" type="TextureRect" parent="HUDRoot/Compass"]
texture_filter = 1
layout_mode = 1
offset_left = 26.0
offset_top = 15.0
offset_right = 90.0
offset_bottom = 55.0
scale = Vector2(2, 2)
mouse_filter = 2
texture = ExtResource("2_vw7fj")
stretch_mode = 2

[node name="CompassNeedle" type="TextureRect" parent="HUDRoot/Compass"]
z_index = 1
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -274.0
offset_top = -207.0
offset_right = -246.0
offset_bottom = -177.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(14, 14.6)
mouse_filter = 2
texture = ExtResource("3_2gox2")
stretch_mode = 2

[node name="FishIcon" type="TextureRect" parent="HUDRoot/Compass"]
texture_filter = 1
layout_mode = 1
offset_left = 26.0
offset_top = 15.0
offset_right = 90.0
offset_bottom = 55.0
scale = Vector2(2, 2)
mouse_filter = 2
texture = ExtResource("3_otwwb")
stretch_mode = 2

[node name="BlinkTimer" type="Timer" parent="HUDRoot/Compass"]

[node name="Location" type="TextureRect" parent="HUDRoot"]
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -288.0
offset_top = 22.0
offset_right = -144.0
offset_bottom = 62.0
grow_horizontal = 0
scale = Vector2(1.8, 1.8)
mouse_filter = 2
texture = ExtResource("3_c2tr4")
stretch_mode = 2

[node name="Menu" type="TextureRect" parent="HUDRoot"]
texture_filter = 1
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 26.0
offset_top = -115.0
offset_right = 94.0
offset_bottom = -70.0
grow_vertical = 0
scale = Vector2(2, 2)
mouse_filter = 2
texture = ExtResource("4_2gox2")
stretch_mode = 2
